# lexer-syntactic

./: CMakeLists.txt  README.md  file.txt  gramatica.txt  main.cpp  program2.txt
src/File/: FileReader.cpp  FileReader.h
src/Grammar/: Grammar.cpp  Grammar.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Syntactic/: Syntactic.cpp  Syntactic.h
src/utils/: RegexManager.cpp  RegexManager.h
src/utils/stack/: Node.hpp  Stack.hpp
